<resources>
    <string name="app_name">Mock test</string>
    <string name="no_results_for">No results for .</string>
    <string name="search">Search</string>
    <string name="menu_ingredients">Ingredients</string>
    <string name="menu_instructions">Instructions</string>
    <string name="menu_misc">Other</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions:</string>
    <string name="prepTimeMinutes">Preparation time (min):</string>
    <string name="cookTime">Cooking time (min):</string>
    <string name="servings">Servings:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="caloriesPerServing">Calories per serving:</string>
    <string name="tags">Tags:</string>
    <string name="error">Error</string>
    <string name="your_recipe">Your recipe</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="save">Save</string>
    <string name="name_of_recipe">Name of recipe</string>
    <string name="new_recipe_ingredients">Ingredients</string>
    <string name="new_recipe_instructions">Instructions</string>
    <string name="new_recipe_name">Your recipe name</string>
    <string name="menu_fav">menu favorite</string>
    <string name="menu_share">menu share</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_recipes">My recipes</string>
    <string name="recipe_name">Recipe Name</string>

    <string name="delete_recipe_title">Delete recipe</string>
    <string name="delete_recipe_button">Delete</string>
    <string name="delete_recipe_confirm_message">Are you sure to delete recipe: %1$s?</string>
    <string name="delete_recipe_success_message">Recipe deleted successfully</string>
    <string name="edit_recipe">Edit</string>
</resources>