<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/recipeNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/newRecipeIngredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_ingredients"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeNameTextView"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/newRecipeInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_recipe_instructions"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newRecipeIngredients"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/editRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_recipe"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>
